fixed problem with arrow icon in carousel on mobiles

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -17,6 +17,7 @@
     overflow: hidden;
     position: relative;
 
+
     .iconWrapper {
         position: absolute;
         cursor: pointer;
@@ -26,6 +27,7 @@
         right: 0;
         border: 1px solid rgba(102,95,130,.15);
         border-radius: 50%;
+        z-index: 1;
 
         // p {
         //     transition: transform ease-in-out .25s, opacity .3s;
@@ -48,6 +50,7 @@
             transition: transform ease-in-out .25s, opacity .3s;
             fill: rgb(102, 95, 130);
             opacity: 0.5;
+            z-index: 1;
         }
 
         .arrowIconLeft {
